<resources>
    <string name="app_name">EL TeamCity</string>
    <string name="login_head">Connect to TeamCity server</string>
    <string name="login_body">Enter TeamCity server address along with your credentials, used in the HTTP authentication, in the form below.</string>
    <string name="address">Server address</string>
    <string name="user">User name</string>
    <string name="password">Password</string>
    <string name="server_address_default">http://192.168.1.155:8111</string>
    <string name="select_projects">Filter Projects</string>
    <string name="login">Sign in</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="show_all">Show all</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="changes">Changes</string>
    <string name="tests">Tests</string>
    <string name="ignored">Ignored</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="problems">Problems</string>
    <string name="recap_channel">Recap channel</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_filtering">Filter notifications to selected projects</string>
    <string name="notifications_frequency">Notifications frequency</string>
    <string-array name="notifications_frequency_entries">
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 1 hour</item>
        <item>Every 2 hours</item>
        <item>Every 5 hours</item>
    </string-array>
    <string-array name="notifications_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>
    <string name="notifications_frequency_default">15</string>

    <!-- Transitions -->
    <string name="build_number_transition">build number transition</string>
    <string name="build_name_transition">build name transition</string>
    <string name="project_name_transition">project name transition</string>
    <string name="build_details_transition">build details transition</string>
    <string name="failed_builds">Failed builds</string>
</resources>
